--- a/BomDiaAcademia/Bom Dia Academia/.project
+++ b/BomDiaAcademia/Bom Dia Academia/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>Bom Dia Academia</name>
+	<name>Bom Dia Academia_Test</name>
 	<comment></comment>
 	<projects>
 	</projects>
